--- a/pom.xml
+++ b/pom.xml
@@ -39,6 +39,12 @@
       <artifactId>async-http-client</artifactId>
       <version>2.12.3</version>
     </dependency>
+
+    <dependency>
+      <groupId>com.google.code.gson</groupId>
+      <artifactId>gson</artifactId>
+      <version>2.10</version>
+    </dependency>
   </dependencies>
 
 </project>
